dataset1235/2025-2/2947369575/users/3324069804/executions/3873599344_291286518.log
== RUN (2025-08-25 22:21:58)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:41:42)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput("Digite um numero:10"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:43:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput())

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:44:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput("Digite um numero: 10"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 22:37:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 22:38:37)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:44:15)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: 10"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 10256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 101234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 105678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 10444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 1011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:47:45)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:46:06)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:47:31)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:31:44)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(4)

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:42:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput("Digite um numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: "))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: "))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: "))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: "))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: "))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:41:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput("Digite um numero:10"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero:10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:44:26)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:41:51)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput(Digite um numero:10))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(imput(Digite um numero:10))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(imput(Digite um numero:10))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(imput(Digite um numero:10))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(imput(Digite um numero:10))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(imput(Digite um numero:10))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:46:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:45:20)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero: 11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:43:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput())

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:40:16)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput())

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput())
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:32:32)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput(4))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput(4))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput(4))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput(4))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput(4))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput(4))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:44:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(imput("Digite um numero: 10"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(imput("Digite um numero: 10"))
              ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
